# WCR-AI

./: .gitignore  file_builder.py  pyproject.toml  readme.md  requirements.txt  test.py
.streamlit/: secrets.toml.example
apps/api/: main.py
apps/web/: Home.py
apps/web/pages/: 1_Chat.py  2_Census_Explorer.py  3_Ring_Detail.py
data/processed/: wcr_census.parquet  wcr_census_clean.csv  wcr_census_validation_report.csv
data/raw/: WCR_Master_Dataset_as_at_061319.csv
scripts/: build_wcr_census.py
src/wcr_agent/: logging_utils.py
src/wcr_agent/agent/: client.py  orchestrator.py  prompts.py  tool_registry.py
src/wcr_agent/analysis/: compare_groups.py  filter_census.py  regime_shift.py  summarize_census.py  yearly_counts.py
src/wcr_agent/data_access/: census.py  regions.py
src/wcr_agent/plotting/: comparisons.py  distributions.py  maps.py  regime_shift.py
src/wcr_agent/tools/: compare_groups_tool.py  filter_rings_tool.py  summarize_rings_tool.py
