[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wcr-agent"
version = "0.1.0"
description = "Warm Core Ring census exploration and analysis app"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Nish Etige" }
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "streamlit>=1.30",
  "plotly>=5.18",
  "pyarrow>=14.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "openai>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.0",
  "ruff>=0.3"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []